--- a/main.css
+++ b/main.css
@@ -52,3 +52,35 @@ nav.navbar-slide.show-menu {
 }
 
 
+/* 
+* ==========================================================================
+        Copyright Section
+* ========================================================================== 
+*/
+
+.topup-lonk {
+    position: relative;
+    left: 50%;
+    top: -50px;
+    margin-left: -25px;
+}
+
+.topup-link-btn {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background-color: #347CD9;
+    color: #fff;
+    border-radius: 50%;
+}
+
+.topup-link-btn:hover {
+    background: #fff;
+    color: #347CD9;
+}
+
+.copyright-text p {
+    margin-bottom: 0;
+    font-family: lato;
+}
