--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@ h4 {
     padding-bottom: 30px;
 }
 
+.fa-arrow-up {
+    padding-top: 8px;
+}
+
 /* 
 * ==========================================================================
       Navbar
