--- a/main.css
+++ b/main.css
@@ -73,6 +73,7 @@ nav.navbar-slide.show-menu {
 .topup-link-btn {
     width: 40px;
     height: 40px;
+    line-height: 100px;
     text-align: center;
     background-color: #347CD9;
     color: #fff;
