--- a/main.css
+++ b/main.css
@@ -89,7 +89,11 @@ nav.navbar-slide.show-menu {
 	padding-top: 12px;
 }
 
-.copyright-text p {
+.copyright-text {
     margin-bottom: 0;
     font-family: lato;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.8em;
+    color: #5a646e;
 }
