--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ nav.navbar-slide.show-menu {
     top: 0;
 }
 
-.navbar-default .navbar-nav > .active > a:focus {
+.navbar-default .navbar-nav > .active {
     box-sizing: border-box;
     background-color: transparent;
     color: #347CD9;
