--- a/main.css
+++ b/main.css
@@ -43,6 +43,15 @@ nav.navbar-slide.show-menu {
     top: 0;
 }
 
+nav.navbar-fixed-top {
+    font-family: "Raleway", "Lato", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.8em;
+    background: #fff;
+    color: #3B80DA;
+}
+
 /* 
 * ==========================================================================
         Copyright Section
