--- a/main.css
+++ b/main.css
@@ -43,6 +43,15 @@ nav.navbar-slide.show-menu {
     top: 0;
 }
 
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    box-sizing: border-box;
+    background-color: transparent;
+    color: #347CD9;
+    font-weight: 500;
+}
+
 nav.navbar-fixed-top {
     font-family: "Raleway", "Lato", sans-serif;
     font-size: 14px;
