--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
     font-size: 14px;
     font-weight: 300;
     line-height: 1.8em;
-    color: #5a646e;
+    color: #191919;
     margin: 0;
     padding: 0;
 }
@@ -38,7 +38,7 @@ h4 {
 }
 
 .padding-top-over {
-    padding-top: 13px;
+    padding-top: 30px;
 }
 
 .padding-top-high {
@@ -82,6 +82,9 @@ h4 {
     margin-top: 30px;
 }
 
+.instruction {
+	margin-top: 3px;
+}
 .margin-bottom {
     margin-bottom: 30px;
 }
@@ -232,6 +235,29 @@ h4 {
     background: rgba(0, 0, 0, 0) url("../img/top.png") no-repeat scroll 0 bottom;
 }
 
+/* 
+* ==========================================================================
+      Back Button
+* ========================================================================== 
+*/
+
+.btn-back {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  border: 0px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 15px;
+  background: #3498db;
+  padding: 17px 29px 17px 31px;
+  text-decoration: none;
+}
+
+.btn-back:hover {
+  background: #3cb0fd;
+  text-decoration: none;
+}
 
 /* 
 * ==========================================================================
@@ -241,17 +267,12 @@ h4 {
 
 nav.navbar-fixed-top {
     background: #fff;
-    -webkit-transition: all 0.8s ease-in-out;
-    transition: all 0.8s ease-in-out;
 }
 
 nav.navbar-slide {
-    top: -52px;
-}
-
-nav.navbar-slide.show-menu {
     top: 0;
 }
+
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
@@ -281,6 +302,11 @@ nav.navbar-slide.show-menu {
 .counter-section .color-overlay {
     background: rgba(0, 0, 0, 0.6) none repeat scroll 0 0;
 }
+
+.counter-section-flights .color-overlay {
+    background: rgba(0, 0, 0, 0.6) none repeat scroll 0 0;
+}
+
 .intro-sectionf {
     background-image: url("../img/travel-bg.jpg");
     background-position: center center;
@@ -921,7 +947,16 @@ p.features-tagline {font-size:1.5em}
     background-color: #f1f3f8;
     background-image: url("../img/intro-bg.jpg");
 	background-image: url("../img/widget-bg.jpg");
-    background-position: center;
+    background-position:bottom;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.counter-section-flights {
+    background-color: #f1f3f8;
+    background-image: url("../img/intro-bg.jpg");
+	background-image: url("../img/widget-bg.jpg");
+    background-position:center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -1084,6 +1119,7 @@ p.features-tagline {font-size:1.5em}
 .panel-heading a.collapsed:after {
     content: "\f067";
     color: #347CD9;
+	
 }
 
 .panel-heading a.collapsed {
@@ -1669,21 +1705,25 @@ p.features-tagline {font-size:1.5em}
     color: #347CD9;
 }
 
+.fa-arrow-up {
+	padding-top: 0px;
+}
+
 .copyright-text p {
     margin-bottom: 0;
     font-family: lato;
 }
 
 .copyright-footer {
-   position: absolute;
-   bottom: 0;
-   width: 100%;
-   z-index: 1;
+	position: absolute;
+	bottom: 0px;
+	width: 100%;
 }
 
 .copyright-menu {
 	font-size: 13px;
 }
+
 
 /* 
 * ==========================================================================
