--- a/main.css
+++ b/main.css
@@ -37,10 +37,6 @@ h4 {
     padding-top: 30px;
 }
 
-.padding-top-over {
-    padding-top: 30px;
-}
-
 .padding-top-high {
     padding-top: 100px;
 }
@@ -82,9 +78,6 @@ h4 {
     margin-top: 30px;
 }
 
-.instruction {
-	margin-top: 3px;
-}
 .margin-bottom {
     margin-bottom: 30px;
 }
@@ -270,9 +263,11 @@ nav.navbar-fixed-top {
 }
 
 nav.navbar-slide {
-    top: 0;
+    top: -52px;
 }
-
+nav.navbar-slide.show-menu {
+     top: 0;
+ }
 
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
